feat(lib): add crypto and core libs, plus an example

--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -1,6 +1,13 @@
 <div id="dashboard" class="page-layout blank">
 
     <div class="content">
+
+        <div class="widget auto-width">
+            <strong>Example:</strong>
+            {{ selectedAccount.address }}
+            {{ selectedAccount.accountId }}
+        </div>
+
         <div class="mr-lg-32" fxFlex="100">
 
             <div fxLayout="column" fxLayoutAlign="start" fxLayout.gt-sm="row" fxLayoutAlign.gt-sm="start start">
