--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -1,20 +1,25 @@
-
 <div class="login">
   <form>
-    <img src="../../assets/images/logos/logo.png" alt="BURST Logo"/>
-    <ul class="buttons">
-      <li (click)="method='active'" [className]="method==='active' ? 'selected' : ''">
+    <img class="burst-logo" src="../../assets/images/logos/logo_white.png" alt="BURST Logo"/>
+    <small>"Phoenix" Wallet ({{version}})</small>
+    <div class="buttons">
+      <button (click)="method='active'"
+              mat-raised-button
+              matTooltip="Info about the action"
+              matTooltipPosition="above"
+              color="primary">
         <mat-icon>person</mat-icon>
-      </li>
-      <li (click)="method='passive'" [className]="method==='passive' ? 'selected' : ''">
+        Enter Active
+      </button>
+      <button (click)="method='passive'"
+              mat-raised-button
+              matTooltip="Info about the action"
+              matTooltipPosition="above"
+              color="primary">
         <mat-icon>visibility</mat-icon>
-      </li>
-      <!-- <li (click)="method='qr'">
-          <svg style="width:45px;height:45px" viewBox="0 0 24 24">
-              <path fill="#000000" d="M3,11H5V13H3V11M11,5H13V9H11V5M9,11H13V15H11V13H9V11M15,11H17V13H19V11H21V13H19V15H21V19H19V21H17V19H13V21H11V17H15V15H17V13H15V11M19,19V15H17V19H19M15,3H21V9H15V3M17,5V7H19V5H17M3,3H9V9H3V3M5,5V7H7V5H5M3,15H9V21H3V15M5,17V19H7V17H5Z" />
-          </svg>
-      </li> -->
-    </ul>
+        Enter Passive
+      </button>
+    </div>
     <!---->
     <!--<div *ngIf="method==='passive'">-->
     <!--<app-create-passive></app-create-passive>-->
