--- a/web/angular-wallet/src/app/login/login.component.scss
+++ b/web/angular-wallet/src/app/login/login.component.scss
@@ -1,48 +1,25 @@
-.login {
-    background: #1e5799;
-    background: linear-gradient(141deg, #3dc6c2 0%, #3ca4bc 25%, #3c8dbc 50%, #3c73bc 75%, #2b50bf 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#428bca',GradientType=0 );
+.login{
+  height: 100%;
+  width: 100%;
+  background: rgb(0, 35, 65) url("../../assets/images/logos/phoenix.png") no-repeat center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  img.burst-logo{
+    height: 128px;
+    padding: 1em;
+  }
+
+  .buttons{
     height: 100%;
-    padding-top:1px;
-
-    form {
-        text-align: center;
-        margin:100px auto;
-        color:rgba(#000, .75);
+    display: flex;
+    justify-items: center;
+    button{
+      flex-grow: 1;
+      align-self: center;
+      font-size: 24px;
+      height: 5em;
+      margin: 0.25em;
     }
-
-    h2 {
-        text-align:left;
-    }
-
-    .buttons {
-        margin:0;
-        padding:0;
-        list-style: none;
-        text-align: center;
-        margin:50px 0 20px;
-        li {
-            cursor: pointer;
-            display:inline-block;
-            margin:0;
-            width:50px;
-            height:50px;
-            line-height: 61px;
-            color:#fff;
-            background:rgba(#000, .2);
-            &:hover {
-                background:rgba(#000, .3);
-            }
-            &:first-child {
-                border-radius:3px 0 0 3px;
-            }
-            &:last-child {
-                border-radius:0 3px 3px 0;
-            }
-            &.selected {
-                // box-shadow: inset 0 0px 4px rgba(#000, .4);
-                color:rgba(#fff, .5);
-            }
-        }
-    }
+  }
 }
