--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -1,7 +1,9 @@
 <div class="login">
   <form>
-    <img class="burst-logo" src="../../assets/images/logos/logo_white.png" alt="BURST Logo"/>
-    <small>"Phoenix" Wallet ({{version}})</small>
+    <div class="logo">
+      <img src="../../assets/images/logos/logo_white.png" alt="BURST Logo"/>
+      <small>"Phoenix" Wallet ({{version}})</small>
+    </div>
     <div class="buttons">
       <button (click)="method='active'"
               mat-raised-button
