--- a/web/angular-wallet/src/app/login/login.component.scss
+++ b/web/angular-wallet/src/app/login/login.component.scss
@@ -1,20 +1,36 @@
-.login{
+.login {
   height: 100%;
   width: 100%;
   background: rgb(0, 35, 65) url("../../assets/images/logos/phoenix.png") no-repeat center;
   display: flex;
+
   justify-content: center;
   align-content: center;
-  img.burst-logo{
-    height: 128px;
-    padding: 1em;
+
+
+  .logo {
+
+    display: flex;
+    flex-direction: column;
+
+    img {
+      height: 128px;
+      padding: 1em;
+    }
+
+    small {
+      color: white;
+      align-self: flex-end;
+    }
   }
 
-  .buttons{
+  .buttons {
     height: 100%;
     display: flex;
+    flex-direction: row;
     justify-items: center;
-    button{
+
+    button {
       flex-grow: 1;
       align-self: center;
       font-size: 24px;
@@ -23,3 +39,4 @@
     }
   }
 }
+
