--- a/web/angular-wallet/src/app/login/login.component.scss
+++ b/web/angular-wallet/src/app/login/login.component.scss
@@ -25,7 +25,7 @@
   }
 
   .buttons {
-    height: 100%;
+    // height: 100%;
     display: flex;
     flex-direction: row;
     justify-items: center;
