feat(auth): add routing for login

--- a/web/angular-wallet/src/@fuse/components/progress-bar/progress-bar.component.html
+++ b/web/angular-wallet/src/@fuse/components/progress-bar/progress-bar.component.html
@@ -1,5 +1,6 @@
 <ng-container *ngIf="visible">
 
     <mat-progress-bar color="accent" [bufferValue]="bufferValue" [mode]="mode" [value]="value"></mat-progress-bar>
+    <small>"Phoenix" Wallet ({{version}})</small>
 
 </ng-container>
