--- a/web/angular-wallet/src/app/app.component.html
+++ b/web/angular-wallet/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- FIXME: isLoggedIn should be centralized -->
 <ng-container *ngIf="isLoggedIn===false">
-  <login></login>
+  <router-outlet></router-outlet>
 </ng-container>
 
 <ng-container *ngIf="isLoggedIn===true">
