--- a/web/angular-wallet/src/app/login/login.component.scss
+++ b/web/angular-wallet/src/app/login/login.component.scss
@@ -1,31 +1,32 @@
 .login {
   height: 100%;
   width: 100%;
-  background: rgb(0, 35, 65) url("../../assets/images/logos/phoenix.png") no-repeat center;
+  background: #00579D;
   display: flex;
-
   justify-content: center;
   align-content: center;
+  align-items: center;
 
+  form {
+    background:#fff;
+    padding:20px;
+    border-radius: 20px;
+    max-width:700px;
+  }
 
   .logo {
-
-    display: flex;
-    flex-direction: column;
-
+    text-align: center;
     img {
-      height: 128px;
-      padding: 1em;
+      max-width:50%;
     }
-
     small {
-      color: white;
-      align-self: flex-end;
+      display: block;
+      right: -15%;
+      position: relative;
     }
   }
 
   .buttons {
-    // height: 100%;
     display: flex;
     flex-direction: row;
     justify-items: center;
@@ -39,4 +40,5 @@
     }
   }
 }
+
 
