--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -1,10 +1,15 @@
 <div class="login">
   <form>
+    <div class="logo">
+      <img src="../../assets/images/logos/logo_blue.png" alt="BURST Logo" />
+      <small>"Phoenix" Wallet ({{version}})</small>
+    </div>
     <h1>Welcome to burst</h1>
     <h2>Are you a new user?</h2>
     <div class="button-row">
-        <button mat-button color="primary" routerLink="/login/active" [queryParams]="{new: true}">Yes, I need a passphrase</button>
-        <button mat-button color="accent" routerLink="/login/active">No, I have a passphrase</button>
+      <button mat-button color="primary" routerLink="/login/active" [queryParams]="{newUser: true}">Yes, I need a
+        passphrase</button>
+      <button mat-button color="accent" routerLink="/login/active">No, I have a passphrase</button>
     </div>
     <small routerLink="/login/passive">Add account without passphrase</small>
   </form>
