--- a/web/angular-wallet/src/app/login/login-active/login-active.component.html
+++ b/web/angular-wallet/src/app/login/login-active/login-active.component.html
@@ -1,5 +1,5 @@
 <div class="login-active">
   <div class="content">
-      <app-account-create [newUser]="newUser"></app-account-create>
+      <app-account-create [newUser]="newUser | async"></app-account-create>
   </div>
 </div>
