--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -1,16 +1,19 @@
-<div class="login">
-  <form>
-    <div class="logo">
-      <img src="../../assets/images/logos/logo_blue.png" alt="BURST Logo" />
-      <small>"Phoenix" Wallet ({{version}})</small>
+<section class="login">
+  <div class="login__panel">
+    <div class="login__header">
+      <img alt="Burst logo" class="login__logo" src="assets/images/logos/logo_blue.png"/>
+      <small class="login__version">"Phoenix" Wallet ({{version}})</small>
     </div>
-    <h1>Welcome to burst</h1>
-    <h2>Are you a new user?</h2>
-    <div class="button-row">
-      <button mat-button color="primary" routerLink="/login/active" [queryParams]="{newUser: true}">Yes, I need a
-        passphrase</button>
-      <button mat-button color="accent" routerLink="/login/active">No, I have a passphrase</button>
+    <div class="login__body">
+      <h1 class="login__title">Get your free Burst account now.</h1>
+      <p class="login__info">Are you a new user? Create a new account and became a new Burst member.</p>
+      <div class="login__actions">
+        <a class="login__link--success" [routerLink]="[ '/login/active' ]" [queryParams]="{ newUser: true }">Yes, I'm a new user</a>
+        <a class="login__link--error" [routerLink]="[ '/login/active' ]" >No, I have an account</a>
+        <p class="login__divider">or</p>
+        <a class="login__link--default" [routerLink]="[ '/login/passive' ]" >Create a new account without passphrase</a>
+      </div>
     </div>
-    <small routerLink="/login/passive">Add account without passphrase</small>
-  </form>
-</div>
+  </div>
+  <div class="login__background"></div>
+</section>
