--- a/web/angular-wallet/src/app/login/login.component.scss
+++ b/web/angular-wallet/src/app/login/login.component.scss
@@ -1,44 +1,107 @@
+$media-querie-mobile: 0;
+$media-querie-tablet: 768px;
+$media-querie-desktop: 992px;
+$media-querie-screen:  1200px;
+
+$error-color: #ff8080;
+$success-color: #00cc99;
+$text-color: #333333;
+$text-alt-color: #b3b3b3;
+
 .login {
-  height: 100%;
-  width: 100%;
-  background: #00579D;
   display: flex;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-
-  form {
-    background:#fff;
-    padding:20px;
-    border-radius: 20px;
-    max-width:700px;
+  height: 100vh;
+  width: 100vw;
+  &__panel {
+    background: #ffffff;
+    padding: 3rem 2rem;
+    width: 720px;
   }
-
-  .logo {
-    text-align: center;
-    img {
-      max-width:50%;
-    }
-    small {
-      display: block;
-      right: -15%;
-      position: relative;
-    }
+  &__logo {
+    width: 150px;
   }
-
-  .buttons {
+  &__version {
+    display: block;
+    padding-left: 45px;
+  }
+  &__body {
     display: flex;
-    flex-direction: row;
-    justify-items: center;
-
-    button {
-      flex-grow: 1;
-      align-self: center;
-      font-size: 24px;
-      height: 5em;
-      margin: 0.25em;
+    flex-direction: column;
+    height: calc(100% - 6rem);
+    justify-content: center;
+    @media screen and (min-width: $media-querie-mobile) {
+      padding: 0 2rem;
     }
+    @media screen and (min-width: $media-querie-tablet) {
+      padding: 0 15rem;
+    }
+  }
+  &__title {
+    color: $text-color;
+    font-weight: 700;
+    margin: 0;
+    @media screen and (min-width: $media-querie-mobile) {
+      font-size: 3rem;
+    }
+    @media screen and (min-width: $media-querie-tablet) {
+      font-size: 4rem;
+    }
+  }
+  &__info {
+    color: $text-alt-color;
+    font-size: 1.75rem;
+    text-align: justify;
+  }
+  &__actions {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 0;
+  }
+  &__link {
+    border-radius: 50px;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    padding: 1rem 2rem;
+    text-decoration: none !important;
+    transition: background .15s ease-in;
+    width: 75%;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    &--success {
+      @extend .login__link;
+      background: $success-color;
+      color: #fdfdfd;
+      &:hover {
+        background: darken($success-color, 5%);
+      }
+    }
+    &--error {
+      @extend .login__link;
+      background: $error-color;
+      color: #fdfdfd;
+      &:hover {
+        background: darken($error-color, 5%);
+      }
+    }
+    &--default {
+      color: $text-color;
+    }
+  }
+  &__divider {
+    color: $text-alt-color;
+    &::before {
+      content: '-';
+      margin-right: .5rem;
+    }
+    &::after {
+      content: '-';
+      margin-left: .5rem;
+    }
+  }
+  &__background {
+    background: url('/assets/images/backgrounds/background-login.jpg') center center no-repeat / cover;
+    width: calc(100% - 720px);
   }
 }
-
-
