--- a/web/angular-wallet/src/@fuse/components/navigation/vertical/collapsable/collapsable.component.html
+++ b/web/angular-wallet/src/@fuse/components/navigation/vertical/collapsable/collapsable.component.html
@@ -45,10 +45,10 @@
 
     <ng-template #itemContent>
         <mat-icon class="nav-link-icon" *ngIf="item.icon">{{item.icon}}</mat-icon>
-        <span class="nav-link-title" [translate]="item.translate">{{item.title}}</span>
-        <span class="nav-link-badge" *ngIf="item.badge" [translate]="item.badge.translate"
+        <span class="nav-link-title" >{{item.id | i18n}}</span>
+        <span class="nav-link-badge" *ngIf="item.badge" 
               [ngStyle]="{'background-color': item.badge.bg,'color': item.badge.fg}">
-            {{item.badge.title}}
+            {{item.badge.translate | i18n}}
         </span>
         <mat-icon class="collapsable-arrow">keyboard_arrow_right</mat-icon>
     </ng-template>
