--- a/web/angular-wallet/src/app/setup/account/create-active/seed/seed.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/seed/seed.component.html
@@ -4,7 +4,7 @@
     </h2>
     <div class="pin-container">
         <div class="seed-area" (mousemove)="movement($event)"></div>
-        <mat-progress-bar mode="determinate" [value]="this.progress"></mat-progress-bar><br />
+        <mat-progress-bar mode="determinate" [value]="progress"></mat-progress-bar><br />
         Move your mouse across the area to create a random seed for the password generation.
     </div>
 </div>
