--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -21,14 +21,10 @@ fuse-sidebar {
 
                         .logo {
 
-                            .logo-icon {
-                                width: 32px;
-                                height: 32px;
+                            img {
+                                width: 100px;
                             }
 
-                            .logo-text {
-                                display: none;
-                            }
                         }
                     }
 
@@ -129,18 +125,10 @@ navbar {
                 display: flex;
                 align-items: center;
 
-                .logo-icon {
-                    width: 24px;
-                    height: 24px;
+                img {
+                    width: 100px;
                 }
 
-                .logo-text {
-                    margin-left: 12px;
-                    font-size: 16px;
-                    font-weight: 300;
-                    letter-spacing: 0.4px;
-                    line-height: normal;
-                }
             }
 
             .buttons {
