feat(sidebar): add QR code to sidebar, update nav

--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -27,8 +27,8 @@
     <div *ngIf="account" class="user" fxLayout="column" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
         <div class="h3 username">{{ account.address.slice(6, account.address.length) }}</div>
-        <div class="h5 email hint-text mt-8" *ngIf="account.alias">{{ account.alias }}</div>
-
+        <div class="h5 email hint-text mt-8">{{ getAccountName() }}</div>
+        <div class="avatar-container fuse-navy-700"><img class="avatar" [src]="getQRCode(account.address)"></div>
     </div>
 
     <div class="navbar-content">
