--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -165,7 +165,6 @@ navbar {
                 .avatar-container {
                     position: absolute;
                     top: 92px;
-                    border-radius: 50%;
                     padding: 8px;
                     transform: translateX(-50%);
                     left: 50%;
@@ -174,13 +173,14 @@ navbar {
                         width: 72px;
                         height: 72px;
                         margin: 0;
+                        border-radius: 0;
                     }
                 }
             }
 
             .navbar-content {
                 flex: 1 1 auto;
-                padding-top: 32px;
+                padding-top: 65px;
             }
         }
     }
