--- a/web/angular-wallet/src/app/layout/vertical/layout-3/layout-3.component.html
+++ b/web/angular-wallet/src/app/layout/vertical/layout-3/layout-3.component.html
@@ -82,7 +82,9 @@
 <!-- TOOLBAR -->
 <ng-template #toolbar>
     <toolbar *ngIf="!fuseConfig.layout.toolbar.hidden"
-             [ngClass]="fuseConfig.layout.toolbar.customBackgroundColor === true ? fuseConfig.layout.toolbar.position + ' ' + fuseConfig.layout.toolbar.background : fuseConfig.layout.toolbar.position">
+             [ngClass]="fuseConfig.layout.toolbar.customBackgroundColor === true ? fuseConfig.layout.toolbar.position + ' ' + fuseConfig.layout.toolbar.background : fuseConfig.layout.toolbar.position"
+             [accounts]="accounts"
+             [selectedAccount]="selectedAccount">
     </toolbar>
 </ng-template>
 <!-- / TOOLBAR -->
