feat(accounts): add accounts list page

--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
@@ -39,7 +39,7 @@
                     <span *ngIf="account">{{account.alias || account.address}}</span>
                 </button>
 
-                <button mat-menu-item class="">
+                <button mat-menu-item class="" routerLink="/accounts">
                     <mat-icon>people</mat-icon>
                     <span>Manage Accounts</span>
                 </button>
